--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="black">#FF000000</color>
     <color name="white">#401212</color>
     <color name="my_collor">#4DE6CF</color>
+    <color name="purple">#9E88C3</color>
 </resources>
