--- a/app/src/main/res/layout/fragment_call_schedule.xml
+++ b/app/src/main/res/layout/fragment_call_schedule.xml
@@ -8,57 +8,87 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="@string/lesson"
+        android:layout_margin="50dp"
+        android:layout_gravity="center"
+        android:textSize="48dp"
+        android:textStyle="bold"
+        android:textColor="@color/teal_200"/>
+    <TextView
+        android:id="@+id/nv_text1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textStyle="italic"
         android:text="@string/lesson1"
-        android:layout_marginStart="20dp"
+        android:layout_margin="10dp"
+        android:layout_gravity="center"
         android:textSize="24dp"
-        android:textColor="@color/white"/>
+        android:textColor="@color/my_collor"/>
 
     <TextView
+        android:id="@+id/nv_text2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/lesson2"
-        android:layout_marginStart="20dp"
+        android:textStyle="italic"
+        android:layout_margin="10dp"
+        android:layout_gravity="center"
         android:textSize="24dp"
-        android:textColor="@color/white"/>
+        android:textColor="@color/my_collor"/>
 
     <TextView
+        android:id="@+id/nv_text3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/lesson3"
-        android:layout_marginStart="20dp"
+        android:textStyle="italic"
+        android:layout_margin="10dp"
+        android:layout_gravity="center"
         android:textSize="24dp"
-        android:textColor="@color/white"/>
+        android:textColor="@color/my_collor"/>
 
     <TextView
+        android:id="@+id/nv_text4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/lesson4"
-        android:layout_marginStart="20dp"
+        android:textStyle="italic"
+        android:layout_margin="10dp"
+        android:layout_gravity="center"
         android:textSize="24dp"
-        android:textColor="@color/white"/>
+        android:textColor="@color/my_collor"/>
 
     <TextView
+        android:id="@+id/nv_text5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/lesson5"
-        android:layout_marginStart="20dp"
+        android:textStyle="italic"
+        android:layout_margin="10dp"
+        android:layout_gravity="center"
         android:textSize="24dp"
-        android:textColor="@color/white"/>
+        android:textColor="@color/my_collor"/>
 
     <TextView
+        android:id="@+id/nv_text6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/lesson6"
-        android:layout_marginStart="20dp"
+        android:textStyle="italic"
+        android:layout_margin="10dp"
+        android:layout_gravity="center"
         android:textSize="24dp"
-        android:textColor="@color/white"/>
+        android:textColor="@color/my_collor"/>
 
     <TextView
+        android:id="@+id/nv_text7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/lesson7"
-        android:layout_marginStart="20dp"
+        android:textStyle="italic"
+        android:layout_margin="10dp"
+        android:layout_gravity="center"
         android:textSize="24dp"
-        android:textColor="@color/white"/>
+        android:textColor="@color/my_collor"/>
 
 </LinearLayout>
