--- a/app/src/main/res/layout/fragment_note.xml
+++ b/app/src/main/res/layout/fragment_note.xml
@@ -6,15 +6,16 @@
     android:layout_height="match_parent"
     android:background="@color/purple">
 
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_note"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:listitem="@layout/item_note" />
-
 
     <EditText
         android:id="@+id/editText_note"
@@ -26,6 +27,7 @@
         android:ems="10"
         android:hint="Message"
         android:paddingStart="12dp"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -35,8 +37,19 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:src="@drawable/ic_baseline_add_24"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/editText_note"
         app:layout_constraintStart_toEndOf="@+id/editText_note"
         app:layout_constraintTop_toTopOf="@+id/editText_note" />
+
+    <Button
+        android:id="@+id/btn_greta"
+        android:text="@string/add_new_note"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:backgroundTint="@color/my_collor"
+        app:layout_constraintBottom_toBottomOf="@+id/editText_note"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
