--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,7 +6,9 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
-    <color name="white">#401212</color>
+    <color name="burgundy">#401212</color>
     <color name="my_collor">#4DE6CF</color>
     <color name="purple">#9E88C3</color>
+    <color name="white">#FDFDFC</color>
+    <color name="red">#D37171</color>
 </resources>
