--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -48,8 +48,8 @@
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/img"
-                android:layout_marginStart= "160dp"/>
+                android:layout_marginStart="160dp"
+                android:src="@drawable/img" />
 
         </LinearLayout>
 
@@ -73,6 +73,7 @@
         android:layout_margin="16dp"
         android:text="@string/call_schedule"
         app:backgroundTint="@color/my_collor"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
 
@@ -85,7 +86,8 @@
         android:text="@string/lesson_schedule"
         app:backgroundTint="@color/my_collor"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_alarm_clock" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_call_schedule" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_notes"
@@ -95,8 +97,9 @@
         android:layout_margin="16dp"
         android:text="@string/notes"
         app:backgroundTint="@color/my_collor"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_call_schedule" />
+        app:layout_constraintTop_toBottomOf="@+id/btn_alarm_clock" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_alarm_clock"
@@ -107,7 +110,9 @@
         android:text="@string/alarm_clock"
         app:backgroundTint="@color/my_collor"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_lesson_schedule" />
+
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_news"
@@ -115,11 +120,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
-        android:layout_marginTop="16dp"
         android:text="@string/school_news"
-        app:backgroundTint="@color/my_collor"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_notes" />
+        app:layout_constraintTop_toBottomOf="@+id/btn_map" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_map"
@@ -127,20 +131,24 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
+        android:layout_marginTop="28dp"
         android:text="@string/school_of_the_map"
-
         app:backgroundTint="@color/my_collor"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_lesson_schedule" />
-
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_notes" />
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/c_fragmentCall"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:elevation="16dp"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="16dp" />
+        app:defaultNavHost="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:navGraph="@navigation/navigation" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
