--- a/app/src/main/res/layout/fragment_note.xml
+++ b/app/src/main/res/layout/fragment_note.xml
@@ -11,6 +11,7 @@
         android:id="@+id/rv_note"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -19,7 +20,7 @@
 
     <EditText
         android:id="@+id/editText_note"
-        android:layout_width="300dp"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="24dp"
         android:layout_marginStart="16dp"
@@ -39,6 +40,7 @@
         android:src="@drawable/ic_baseline_add_24"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/editText_note"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/editText_note"
         app:layout_constraintTop_toTopOf="@+id/editText_note" />
 
