--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -2,24 +2,28 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/navigation">
+    android:id="@+id/navigation"
+    app:startDestination="@+id/mainFragment">
 
     <fragment
-        android:id="@+id/mainActivity"
-        android:name="com.example.schoolorgonizer.MainActivity"
-        android:label="MainActivity"
-        tools:layout="@layout/activity_main">
+        android:id="@+id/mainFragment"
+        android:name="com.example.schoolorgonizer.MainFragment"
+        android:label="MainFragment"
+        tools:layout="@layout/fragment_main">
         <action
             android:id="@+id/toCallScheduleFragment"
             app:destination="@+id/callScheduleFragment"
+
             />
         <action
             android:id="@+id/toAlarmClockFragment"
             app:destination="@+id/alarmClockFragment"
+
             />
         <action
             android:id="@+id/toNoteFragment"
             app:destination="@+id/noteFragment"
+
             />
     </fragment>
 
@@ -28,10 +32,10 @@
     android:name="com.example.schoolorgonizer.callSchedule.CallScheduleFragment"
     android:label="CallScheduleFragment"
     tools:layout="@layout/fragment_call_schedule">
-    <action
-        android:id="@+id/toMainActivity"
-        app:destination="@+id/mainActivity"
-        />
+<!--    <action-->
+<!--        android:id="@+id/toMainActivity"-->
+<!--        app:destination="@+id/mainActivity"-->
+<!--        />-->
 </fragment>
 
     <fragment
@@ -39,10 +43,10 @@
         android:name="com.example.schoolorgonizer.alarmсlock.AlarmClockFragment"
         android:label="AlarmLoginFragment"
         tools:layout="@layout/fragment_alarm_clock">
-        <action
-            android:id="@+id/toMainActivity"
-            app:destination="@+id/mainActivity"
-            />
+<!--        <action-->
+<!--            android:id="@+id/toMainActivity"-->
+<!--            app:destination="@+id/mainActivity"-->
+<!--            />-->
         <action
             android:id="@+id/toRingtonFragment"
             app:destination="@+id/ringtonFragment"
@@ -54,20 +58,20 @@
         android:name="com.example.schoolorgonizer.notes.NoteFragment"
         android:label="NoteFragment"
         tools:layout="@layout/fragment_note">
-        <action
-            android:id="@+id/toMainActivity"
-            app:destination="@+id/mainActivity"
-            />
+<!--        <action-->
+<!--            android:id="@+id/toMainActivity"-->
+<!--            app:destination="@+id/mainActivity"-->
+<!--            />-->
     </fragment>
     <fragment
         android:id="@+id/ringtonFragment"
         android:name="com.example.schoolorgonizer.alarmсlock.RingtonFragment"
         android:label="AlarmLoginFragment"
         tools:layout="@layout/fragment_rington">
-        <action
-            android:id="@+id/toAlarmClockFragment"
-            app:destination="@+id/alarmClockFragment"
-            />
+<!--        <action-->
+<!--            android:id="@+id/toAlarmClockFragment"-->
+<!--            app:destination="@+id/alarmClockFragment"-->
+<!--            />-->
     </fragment>
 
 </navigation>
