--- a/app/src/main/res/layout/fragment_rington.xml
+++ b/app/src/main/res/layout/fragment_rington.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="150dp"
+    android:layout_width="160dp"
     android:layout_height="300dp"
     android:layout_gravity="center"
     android:background="@color/white"
@@ -8,10 +8,11 @@
 
     <TextView
         android:id="@+id/rr"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="string/question"
-        android:textSize="24sp"
+        android:text="@string/ringtone"
+        android:textSize="18sp"
+        android:textColor="@color/red"
         android:layout_margin="6dp"/>
 
     <RadioGroup
@@ -23,38 +24,37 @@
             android:id="@+id/trek1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/trek1"
+            android:text="@string/ringtone1"
             />
 
         <RadioButton
             android:id="@+id/trek2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/trek2"
+            android:text="@string/ringtone2"
             />
 
         <RadioButton
             android:id="@+id/trek3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/trek3"
+            android:text="@string/ringtone3"
             />
 
         <RadioButton
             android:id="@+id/trek4"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/trek4"
+            android:text="@string/ringtone4"
             />
-
     </RadioGroup>
 
     <Button
         android:id="@+id/main_submit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="56dp"
-        android:text="ok"
-        />
+        android:layout_marginHorizontal="38dp"
+        android:backgroundTint="@color/red"
+        android:text="ok" />
 
 </LinearLayout>
