--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,12 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/schoo"
     tools:context=".MainActivity">
 
     <LinearLayout
         android:id="@+id/l_weather"
         android:layout_width="match_parent"
-        android:layout_height="130dp"
+        android:layout_height="110dp"
         android:background="@drawable/trava"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
